//
//  AccessibilityID.swift
//  AppStoreSearch
//
//  Created by doremin on 2/12/24.
//

import Foundation

enum AccessibilityID {
  static let homeSearchField = "HomeSearchField"
}
