...
    appConfiguration.backgroundColor
      .bind(to: view.rx.backgroundColor)
      .disposed(by: disposeBag)
  }
  
  private func setupSearchController() {
    navigationItem.title = "Search"
    navigationItem.largeTitleDisplayMode = .automatic
    navigationItem.searchController = searchController
    navigationItem.hidesSearchBarWhenScrolling = false
    searchController.obscuresBackgroundDuringPresentation = false
    searchController.searchBar.placeholder = "Search App"
    
...
